<resources>

    <string name="app_name">xGame</string>
    <string name="ButtonOne">Speech &amp; Sound Demo</string>
    <string name="Label1">اضغط لبدء الأوامر.لاختبار سماعة الأذن اليمنى قل (يمين). لاختبار سماعة الأذن اليسرى قل (يسار).لاختبار كلتا السماعتين قل (اختبار) .</string>
    <string name="gestureString">Please try the differnent gestures you like , all gestures are supported including swipe right , left , up , down , single tap , double tap and long touch</string>
    <string name="button2">Gestures demo</string>
    <string name="button3">Sensors demo</string>
    <string name="GPS_TV">Please wait while the system detects your location..</string>
    <string name="ACC_TV">If you moved the device the Accelerometer data will be shown</string>
    <string name="Gyro_TV">Please,rotate the device to test the Gyroscope sensor</string>
    <string name="RTL">اضغط هنا لاختبار ارتفاع وانخفاض مستوى الصوت من اليمين لليسار</string>
    <string name="LTR">اضغط هنا لاختبار ارتفاع وانخفاض مستوى الصوت من اليسار لليمين</string>
    <string name="button4">TTS Demo</string>
    <string name="TTS">Start</string>
    <string name="Hint">Enter your text here</string>
    <string name="XMLdata">XML Data Read:</string>
    <string name="button5">XML Demo</string>
    <string name="langugeSelect">Use the menu button to select your speech language.</string>
    <string name="getready">Ready?</string>
    <string name="MainViewTitle">Headphone Games</string>
    <string name="img_cnt_desc">Headphone Games Category Image</string>
    <string name="tv_cat">xGame Categories</string>
    <string name="nxt_btn">Next Category</string>
    <string name="pre_btn">Previous Category</string>
    <string name="sel_btn">Select This Category</string>
    <string name="game">Game Image</string>
    <string name="progress">Download Progress..Please Wait</string>
    <string name="name">Catch The Beep</string>
    <string name="down">Downloading Game</string>
    <string name="percent">50%</string>
    <string name="play">Start the game</string>
    <string name="home">Back to the main page</string>
    <string name="how">How to play</string>
    <string name="about">About Us</string>
    <string name="cont">Contact Us</string>
    <string name="sb">Scoreboard</string>
    <string name="over">Game Over</string>
    <string name="log">Login button</string>
    <string name="reg">Register button</string>
    <string name="logbtn">Login</string>
    <string name="regbtn">Register</string>
    <string name="pwd">Password:</string>
    <string name="usr">User Name:</string>

    <string-array name="nav_actions">
        <item>xGame</item>
        <item>About Us</item>
        <item></item>
    </string-array>

    <string name="game_cnt">The game icon</string>
    <string name="down_cnt">Download</string>
    <string name="LoginOrReegister">Login  |  Register</string>
    <string name="loading">Loading Data</string>
    <string name="plyagn">Play again</string>

</resources>